Update menu card layout

--- a/src/menu.html
+++ b/src/menu.html
@@ -52,7 +52,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Giacomo Conterno Monfortino, Barolo Riserva</div>
-        <div class="menu-item__description">Expensive wine</div>
+        <div class="menu-item__description">Expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$1287</div>
 </div>
@@ -60,7 +60,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Masseto Toscana IGT</div>
-        <div class="menu-item__description">Expensive wine</div>
+        <div class="menu-item__description">Expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$917</div>
 </div>
@@ -68,7 +68,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Case Basse di Gianfranco Soldera Toscana IGT-Brunello di Montalcino</div>
-        <div class="menu-item__description">Expensive wine</div>
+        <div class="menu-item__description">Expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$917</div>
 </div>
