Update font sizing on menu

--- a/src/menu.html
+++ b/src/menu.html
@@ -18,7 +18,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="https://cana.com">lancio del prodotto</a></div>
-        <div class="menu-item__description"><u>frontend development salad</u> for cana website launch; prepared using <u>html, css, javascript, twig, and craftCMS</u></div>
+        <div class="menu-item__description"><u>frontend development salad</u> for cana website launch; prepared using <u>HTML, CSS, javascript, twig, and craftCMS</u></div>
     </div>  
     <div class="menu-item__price">$17</div>
 </div>
@@ -39,7 +39,6 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item__price">$18</div>
 </div>
 
-
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="https://rallyhealth.com">modifiche del sito</a></div>
@@ -48,11 +47,28 @@ subtext: Edible Cuisine (indoor seating)
     <div class="menu-item__price">$13</div>
 </div>
 
+<div class="menu-item slide-up">
+    <div class="menu-item__about">
+        <div class="menu-item__title"><a href="https://eleventy-barebones-starter.netlify.app/">boilerplate sito web</a></div>
+        <div class="menu-item__description">tossed templating soup using <u>eleventyJS, nunjucks, HTML and CSS</u></div>
+    </div>
+    <div class="menu-item__price">$13</div>
+</div>
+
+<div class="menu-item slide-up">
+    <div class="menu-item__about">
+        <div class="menu-item__title"><a href="https://jsonderulo.ga/">json derulo guida</a></div>
+        <div class="menu-item__description">fun little dessert site explaining what JSON is; using <u>eleventyJS</u></div>
+    </div>
+    <div class="menu-item__price">$13</div>
+</div>
+
 <hr class="menu-hori"/>
+
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Giacomo Conterno Monfortino, Barolo Riserva</div>
-        <div class="menu-item__description">Expensive wine that i know nothing about</div>
+        <div class="menu-item__description">expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$1287</div>
 </div>
@@ -60,7 +76,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Masseto Toscana IGT</div>
-        <div class="menu-item__description">Expensive wine that i know nothing about</div>
+        <div class="menu-item__description">expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$917</div>
 </div>
@@ -68,7 +84,7 @@ subtext: Edible Cuisine (indoor seating)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">Case Basse di Gianfranco Soldera Toscana IGT-Brunello di Montalcino</div>
-        <div class="menu-item__description">Expensive wine that i know nothing about</div>
+        <div class="menu-item__description">expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$917</div>
 </div>
