--- a/src/menu.html
+++ b/src/menu.html
@@ -57,7 +57,7 @@ subtext: Edible Cuisine (indoor seating for easter eggs available)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="#" onclick=makePista()>stregoneria al pistacchio</a></div>
-        <div class="menu-item__description">magic spell concocted from <u>fresh pistachio nuts and ice cream</u>; this item <u><i>toggles on click</i></u></div>
+        <div class="menu-item__description">magic spell concocted from <u>fresh pistachio nuts and ice cream</u>; this item <u><b>toggles on click</b></u></div>
     </div>
     <div class="menu-item__price">$42</div>
 </div>
@@ -75,7 +75,7 @@ subtext: Edible Cuisine (indoor seating for easter eggs available)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="#" onclick=makeRose()>Rosé</a></div>
-        <div class="menu-item__description">expensive wine that i know nothing about; this item also <u><i>toggles on click</i></u></div>
+        <div class="menu-item__description">expensive wine that i know nothing about; this item also <u><b>toggles on click</b></u></div>
     </div>  
     <div class="menu-item__price">$42</div>
 </div>
