Update menu content

--- a/src/menu.html
+++ b/src/menu.html
@@ -51,7 +51,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
         <div class="menu-item__title"><a href="https://eleventy-barebones-starter.netlify.app/">boilerplate sito web</a></div>
         <div class="menu-item__description">tossed templating soup using <u>eleventyJS, nunjucks, HTML and CSS</u>; with <u>pagination</u> and croutons</div>
     </div>
-    <div class="menu-item__price">$13</div>
+    <div class="menu-item__price">$9</div>
 </div>
 
 <div class="menu-item slide-up">
@@ -74,7 +74,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="#" onclick=makeRose()>Rosé</a></div>
+        <div class="menu-item__title"><a href="#" onclick=makeRose()>wholesale Rosé</a></div>
         <div class="menu-item__description">expensive wine that i know nothing about; this item also <u><b>toggles on click</b></u></div>
     </div>  
     <div class="menu-item__price">$42</div>
@@ -82,7 +82,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title">Giacomo Conterno Monfortino, Barolo Riserva</div>
+        <div class="menu-item__title">Giacomo Conterno Monfortino</div>
         <div class="menu-item__description">expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$1287</div>
@@ -106,7 +106,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title">Case Basse di Gianfranco Soldera Toscana IGT-Brunello di Montalcino</div>
+        <div class="menu-item__title">Case Basse di Gianfranco Soldera Toscana</div>
         <div class="menu-item__description">expensive wine that i know nothing about</div>
     </div>  
     <div class="menu-item__price">$1114</div>
