--- a/src/menu.html
+++ b/src/menu.html
@@ -5,53 +5,81 @@ title: "Projets à la Carte"
 subtext: mixed Edible Cuisine (indoor seating available)
 ---
 <div class="menu-collection irevamp-mx-auto">
+
+
 <div class="menu-divider">Food & Drinks</div>
+
+
+
+    
+<div class="menu-item-row">
+
+<div class="menu-item-column">
+<div class="slide-up irevamp-mx-auto">
+    <div class="glossary irevamp-lead">
+        🌱 - Featured Projects
+    </div>  
+</div>
+</div>
+
+<div class="menu-item-column">
+<div class="slide-up">
+    <div class="glossary irevamp-lead">
+        🔗 - Hyperlinks
+    </div>  
+</div>
+</div>
+
+</div>
+
+
+
 <div class="menu-item">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="/">portafoglio personale</a></div>
+        <div class="menu-item__title"><a href="/" target="_blank">portafoglio personale</a></div>
         <div class="menu-item__description">new sourdough bread made with <u>eleventyJS, nunjucks and SASS</u>; comes with a <u>delightful lighthouse score</u> on the side</div>
     </div>
-    <div class="menu-item__price">$14</div>
+    <div class="menu-item__price menu-item__price-project">$14</div>
 </div>
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://cana.com">lancio del prodotto</a></div>
+        <div class="menu-item__title"><a href="https://cana.com" target="_blank">lancio del prodotto</a></div>
         <div class="menu-item__description"><u>frontend development salad</u> for cana website launch; prepared using <u>HTML, CSS, javascript, twig, and craftCMS</u></div>
     </div>  
-    <div class="menu-item__price">$17</div>
+    <div class="menu-item__price menu-item__price-project" target="_blank">$17</div>
 </div>
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://parth-2020.netlify.app/">portafoglio d'archivio</a></div>
+        <div class="menu-item__title"><a href="https://parth-2020.netlify.app/" target="_blank">portafoglio d'archivio</a></div>
         <div class="menu-item__description">aged archive website cheddar <u>made from a self-generated boilerplate</u>, with a hint of <u>eleventyJS and custom stylesheets</u>; includes easter eggs from old portfolios</div>
     </div>
-<div class="menu-item__price">$12</div>
+<div class="menu-item__price menu-item__price-project">$12</div>
 </div>
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://tofu.wiki/">wiki del tofu</a></div>
+        <div class="menu-item__title"><a href="https://tofu.wiki/" target="_blank">wiki del tofu</a></div>
         <div class="menu-item__description">a fresh, quick tofu guide put together using a bit of <u>golang and hugo</u>; offers lightning fast digestion with <u>accessibility and rapid loading</u></div>
     </div>
-<div class="menu-item__price">$18</div>
+<div class="menu-item__price menu-item__price-project">$18</div>
 </div>
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://rallyhealth.com">modifiche del sito</a></div>
+        <div class="menu-item__title"><a href="https://rallyhealth.com" target="_blank">modifiche del sito</a></div>
         <div class="menu-item__description">site updates for the rally health website using <u>craftCMS and twig templating</u>, made from ripe tomatoes</div>
     </div>
-    <div class="menu-item__price">$13</div>
+    <div class="menu-item__price menu-item__price-project">$13</div>
 </div>
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://eleventy-barebones-starter.netlify.app/">boilerplate sito web</a></div>
+        <div class="menu-item__title"><a href="https://eleventy-barebones-starter.netlify.app/" target="_blank">boilerplate sito web</a></div>
         <div class="menu-item__description">tossed templating soup using <u>eleventyJS, nunjucks, HTML and CSS</u>; with <u>pagination</u> and croutons</div>
     </div>
-    <div class="menu-item__price">$9</div>
+    <div class="menu-item__price menu-item__price-project">$9</div>
 </div>
 
 <div class="menu-item slide-up">
@@ -64,10 +92,10 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="https://jsonderulo.ga/">json derulo guida</a></div>
+        <div class="menu-item__title"><a href="https://jsonderulo.ga/" target="_blank">json derulo guida</a></div>
         <div class="menu-item__description">fun little dessert site explaining what JSON is; using <u>eleventyJS</u></div>
     </div>
-    <div class="menu-item__price">$17</div>
+    <div class="menu-item__price menu-item__price-project">$17</div>
 </div>
 
 <hr class="menu-hori"/>
@@ -118,13 +146,11 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item-row">
 
-
 <div class="menu-item-column">
-
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title">water</div>
-        <div class="menu-item__description">great big gushing flowing tides</div>
+        <div class="menu-item__description">great big gushing, flowing tides</div>
     </div>  
     <div class="menu-item__price">$0</div>
 </div>
@@ -132,11 +158,10 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 
 <div class="menu-item-column">
-
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="#" onclick="makeGrape()">grape (1)</a></div>
-        <div class="menu-item__description">free nutrition on the house</div>
+        <div class="menu-item__description">free nutrition, on the house</div>
     </div>  
     <div class="menu-item__price">$0</div>
 </div>
