--- a/src/menu.html
+++ b/src/menu.html
@@ -52,7 +52,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
 
 <div class="menu-item slide-up">
     <div class="menu-item__about">
-        <div class="menu-item__title"><a href="#" onclick=makePeach()>trasformazione della pesca</a></div>
+        <div class="menu-item__title"><a href="#" onclick=makePeach()>gelato alla pesca</a></div>
         <div class="menu-item__description">delicious peach sorbet, put together with <u>mythical artefacts</u> and the <u>odd toggle effect</u></div>
     </div>  
     <div class="menu-item__price" target="_blank">$11</div>
@@ -61,7 +61,7 @@ subtext: mixed Edible Cuisine (indoor seating available)
 <div class="menu-item slide-up">
     <div class="menu-item__about">
         <div class="menu-item__title"><a href="https://parth-2020.netlify.app/" target="_blank">portafoglio d'archivio</a></div>
-        <div class="menu-item__description">aged archive website cheddar <u>made from a self-generated boilerplate</u>, with a hint of <u>eleventyJS and custom stylesheets</u>; includes easter eggs from old portfolios</div>
+        <div class="menu-item__description">aged archive website flatbread <u>made from a self-generated boilerplate</u>, with a hint of <u>eleventyJS and custom stylesheets</u>; includes easter eggs from old portfolios</div>
     </div>
 <div class="menu-item__price menu-item__price-project">$12</div>
 </div>
